updated seed file to include 2 goals for user 2, however these goals are not aligning properly with their assigned user; updated views files to battle with flexbox and update a few variables that wouldn't route correctly (i.e. line 12 on page-header.hbs had /goal removed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ body {
   font-family: Arial;
   margin: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   min-height: 100vh;
   justify-content: flex-start;
   background-color: var(--quatrinary);
@@ -150,9 +150,12 @@ main {
   /* flex-flow: column wrap; */
   /* align-content: flex-start;
   align-items: center;
-} */ */
+} */
+
 .container-fluid{
   padding: 0;
+  display: flex;
+  flex-flow: column wrap;
 }
 .img-fluid {
   max-width: 100%;
